--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:mediarouter-v7:28.0.0'
+
+    //google
+    implementation 'com.google.android.gms:play-services:12.0.1'
 
     //retrofit2
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
@@ -50,4 +54,8 @@ dependencies {
 
     //soptlight
     implementation 'com.github.takusemba:spotlight:1.5.0'
+
+    //zxing
+    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.0'
+
 }
