--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,8 @@ dependencies {
     //zxing
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.0'
 
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
 }
