--작업 완료 내역-- MyPage_SelectRefundAccountActivity - 환불계좌 클릭 시 대표환불계좌 바뀌게끔 수정.
PersnoalPayment - 스토리보드 수정으로 인한 다수의 변경작업.
PersnoalPayment_MainFragment - QR코드 , 바코드 생성 및 터치시 애니메이션 효과 구현
PersnoalPayment_ScanFragment - 스캔하기 layout 수정

--작업 예정 내역--
QR코드 스캔 시 결제 Dialog창을 띄워 결제 완료하기. (금액 차감부분까지)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.dutch.hdh.dutchpayapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -10,6 +11,7 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
@@ -21,8 +23,10 @@
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:exported="true"
             android:launchMode="singleTop"
+            android:screenOrientation="fullSensor"
             android:theme="@style/AppTheme.FullScreen.Transparent"
-            android:windowSoftInputMode="adjustNothing">
+            android:windowSoftInputMode="adjustNothing"
+            tools:replace="screenOrientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -64,8 +68,20 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.FullScreen.Transparent"
             android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
-        <activity android:name=".ui.find.email.FindEmailActivity" />
-        <activity android:name=".ui.find.password.FindPasswordActivity"></activity>
+
+        <activity
+            android:name=".ui.find.email.FindEmailActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.FullScreen.Transparent"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
+
+        <activity
+            android:name=".ui.find.password.FindPasswordActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.FullScreen.Transparent"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
     </application>
 
 </manifest>
